network.yaml
Description: "Creates the VPC network for the Polly Batch application."
Mappings:
  CidrMappings:
    vpc:
      CIDR: "10.0.0.0/16"
    public-subnet-1:
      CIDR: "10.0.1.0/24"
    private-subnet-1:
      CIDR: "10.0.11.0/24"
    private-subnet-2:
      CIDR: "10.0.12.0/24"
    private-subnet-3:
      CIDR: "10.0.13.0/24"

  DomainNameMappings:
    eu-west-1:
      Domain: "eu-west-1.compute.internal"
    us-east-1:
      Domain: "ec2.internal"
    us-west-2:
      Domain: "us-west-2.compute.internal"

Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: !FindInMap [ CidrMappings, vpc, CIDR ]
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        -
          Key: "Name"
          Value: "AWS Batch VPC"

  DHCPOptions:
    Type: "AWS::EC2::DHCPOptions"
    Properties:
      DomainName: !FindInMap [ DomainNameMappings, !Ref "AWS::Region", Domain ]
      DomainNameServers:
        - AmazonProvidedDNS

  VPCDHCPOptionsAssociation:
    Type: "AWS::EC2::VPCDHCPOptionsAssociation"
    Properties:
      DhcpOptionsId: !Ref DHCPOptions
      VpcId: !Ref VPC

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    DependsOn: "VPC"

  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    DependsOn:
      - "VPC"
      - "InternetGateway"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    DependsOn:
      - "VPC"
      - "AttachGateway"
    Properties:
      VpcId: !Ref VPC
      Tags:
        -
          Key: "Name"
          Value: "PublicRouteTable"

  PublicSubnet1:
    Type: "AWS::EC2::Subnet"
    DependsOn: "AttachGateway"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [ CidrMappings, public-subnet-1, CIDR ]
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      Tags:
        -
          Key: "Name"
          Value: "PublicSubnet1"

  PublicSubnet1RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PrivateSubnet1:
    Type: "AWS::EC2::Subnet"
    DependsOn: "AttachGateway"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [ CidrMappings, private-subnet-1, CIDR ]
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      Tags:
        -
          Key: "Name"
          Value: "PrivateSubnet1"

  PrivateSubnet2:
    Type: "AWS::EC2::Subnet"
    DependsOn: "AttachGateway"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [ CidrMappings, private-subnet-2, CIDR ]
      AvailabilityZone: !Select [ 1, !GetAZs "" ]
      Tags:
        -
          Key: "Name"
          Value: "PrivateSubnet2"

  PublicRoute:
    Type: "AWS::EC2::Route"
    DependsOn:
      - "PublicRouteTable"
      - "AttachGateway"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

  PrivateSubnet1RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

  PrivateRouteTable:
    Type: "AWS::EC2::RouteTable"
    DependsOn:
      - "VPC"
      - "NAT"
    Properties:
      VpcId: !Ref VPC
      Tags:
        -
          Key: "Name"
          Value: "PrivateRouteTable"

  PrivateRoute:
    Type: "AWS::EC2::Route"
    DependsOn:
      - "PrivateRouteTable"
      - "NAT"
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NAT

  NAT:
    Type: "AWS::EC2::NatGateway"
    DependsOn: "AttachGateway"
    Properties:
      AllocationId: !GetAtt EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  EIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: "vpc"

Outputs:
  VPC:
    Description: The VPC Id
    Value: !Ref VPC

  PrivateSubnets:
    Description: The list of private subnets
    Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ] ]
